--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "secraria",
         "secrtaria",
         "usecase",
-        "usecases"
+        "usecases",
+        "خدمات",
+        "سيكرتاريا"
     ]
 }
