create auth module arch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "Aclonica",
+        "Firestore",
         "Getx",
         "onboearding",
         "screenutil",
@@ -8,7 +9,14 @@
         "secrtaria",
         "usecase",
         "usecases",
+        "التالي",
+        "الصوت",
+        "المحادثات",
+        "المهمة",
         "خدمات",
-        "سيكرتاريا"
+        "خدمة",
+        "سيكرتاريا",
+        "مكالمات",
+        "والفديو"
     ]
 }
