add login screen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "Aclonica",
+        "autovalidate",
         "Firestore",
+        "Fluttertoast",
         "Getx",
         "onboearding",
         "screenutil",
