implement login and register methods

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Aclonica",
         "autovalidate",
+        "Cupertino",
         "Firestore",
         "Fluttertoast",
         "Getx",
