end auth moduel

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get_storage: ^2.0.3
   google_sign_in: ^5.4.0
   image_picker: ^0.8.5+3
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-0
   shared_preferences: ^2.0.15
   splash_screen_view: ^3.0.0
 
